Kafka $emit connectivity failures should error out the processor

XMLWordPrintableJSON

    • Atlas Streams
    • Fully Compatible
    • Sprint 54, Sprint 55
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      processStreamDoc needs to distinguish between "data errors" and unknown failures from produce() calls. An unknown produce() error should propogate the excetion all the way back to the Executor.

      https://github.com/10gen/mongo/blob/master/src/mongo/db/modules/enterprise/src/streams/exec/kafka_emit_operator.cpp#L322C8-L322C27

       
       

            Assignee:
            Matthew Normyle
            Reporter:
            Matthew Normyle
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: