SERVER-88536: Kafka $emit connectivity failures should error out the processor (#25543)

This PR changes KafkaEmitOperator to use a delivery callback to detect
connectivity issues when flushing messages to Kafka. Prior to this PR,
if the connection the Kafka went down, the `produce` and `flush` calls
would still report success.